# BookBook

./: .gitignore  .language  MultiLanguage copy.json  PACKAGE.md  README.md  README_ar.md  README_bn.md  README_ca.md  README_cs.md  README_el.md  README_en.md  README_es.md  README_eu.md  README_fa.md  README_fil.md  README_fr.md  README_gl.md  README_hi.md  README_hr.md  README_hu.md  README_id.md  README_is.md  README_jv.md  README_la.md  README_lt.md  README_lv.md  README_ms.md  README_nl.md  README_nn.md  README_pl.md  README_pt-BR.md  README_pt-PT.md  README_ru.md  README_sq.md  README_sv.md  README_ta.md  README_te.md  README_tr.md  README_ur.md  README_zh-TW.md  (+10 more)
backend/: .env.example  backend.spec  builtin_library.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
backend/routers/: books.py  generate.py  knowledge.py  p2p.py  providers.py  settings.py
backend/services/: agent_tools.py  book_builder.py  chapter_router.py  checkpoint.py  content_tools.py  cover_gen.py  identity.py  llm_service.py  milvus_manager.py  p2p_service.py  plan_agent.py  rag_service.py  react_agent.py  reranker.py  stub_service.py  vector_store.py
docs/: writing-cards.md
docs/readmes/: README_af.md  README_ar.md  README_az.md  README_bg.md  README_bn.md  README_ca.md  README_ceb.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_en.md  (+45 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
review/: frontend.md
scripts/: gen-i18n.js  generate-covers.js  migrate_db.py  package.json  sample-titles.txt
(+228 files in other folders)
