[project]
name = "ebook-generator"
version = "1.0.0"
description = "AI eBook Generator with P2P sharing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.7.0",
    "sse-starlette>=1.8.0",
    "getmac>=0.9.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
